# CppTrendingMiniChat

./: CMakeLists.txt  README.md
include/: epoll.hpp  socket.hpp
src/client/: client.cpp
src/common/: epoll.cpp  socket.cpp
src/server/: server.cpp
